--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
-					"style": "scss"
+					"style": "css"
 				}
 			},
 			"root": "",
@@ -22,7 +22,7 @@
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
-						"inlineStyleLanguage": "scss",
+						"inlineStyleLanguage": "css",
 						"assets": [
 							{
 								"glob": "**/*",
@@ -30,10 +30,7 @@
 							},
 							"src/assets"
 						],
-						"styles": [
-							"@angular/material/prebuilt-themes/azure-blue.css",
-							"src/styles.scss"
-						],
+						"styles": ["src/styles.css"],
 						"scripts": [],
 						"stylePreprocessorOptions": {
 							"includePaths": ["./src/assets/styles"]
@@ -83,7 +80,7 @@
 					"options": {
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
-						"inlineStyleLanguage": "scss",
+						"inlineStyleLanguage": "css",
 						"assets": [
 							{
 								"glob": "**/*",
@@ -92,7 +89,7 @@
 						],
 						"styles": [
 							"@angular/material/prebuilt-themes/azure-blue.css",
-							"src/styles.scss"
+							"src/styles.css"
 						],
 						"scripts": []
 					}
