--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@angular/platform-browser": "^18.0.0",
 		"@angular/platform-browser-dynamic": "^18.0.0",
 		"@angular/router": "^18.0.0",
+		"@stripe/stripe-js": "^4.1.0",
 		"chart.js": "^4.4.3",
 		"date-fns": "^3.6.0",
 		"ng2-charts": "^6.0.1",
